--- a/src/scope1_scope2_analysis.ipynb
+++ b/src/scope1_scope2_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "f7f4dbb7-986b-4eec-8b15-a99bf5ebb536",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "id": "43e2e29c-e08e-4072-be54-14501f02f41b",
    "metadata": {
     "scrolled": true
@@ -366,7 +366,7 @@
        "19     5107.437078       NaN  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "65308de6-7b95-4b48-9e2c-c42f7fb454c6",
    "metadata": {},
    "outputs": [
@@ -408,7 +408,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,22 +420,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 28,
    "id": "05cbd763-14cc-4604-8f38-e35c79007780",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "sector_median = df.groupby(\"Subsector Name\")[[\"Charlie (milUSD)\",\n",
+    "sector_medians = df.groupby(\"Subsector Name\")[[\"Charlie (milUSD)\",\n",
     "                             \"Alpha (milUSD)\",\"Romeo (milUSD)\",\n",
     "                             \"Echo\"]].median().T.to_dict()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 29,
    "id": "2c5758f2-51ee-4136-8a52-b5c0d11cecd2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fill_missing_values(row):\n",
+    "    sector = row['Subsector Name']\n",
+    "    for col in [\"Charlie (milUSD)\",\"Alpha (milUSD)\",\"Romeo (milUSD)\",\"Echo\"]:\n",
+    "        if pd.isna(row[col]) and sector in sector_medians:\n",
+    "            row[col] = sector_medians[sector][col]\n",
+    "    return row\n",
+    "\n",
+    "df = df.apply(fill_missing_values, axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "d74af956-90df-416b-8275-bfac7f0813be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create new features\n",
+    "df['Energy_Intensity'] = df['Total S1+S2 (tCo2e)'] / df['Charlie (milUSD)']\n",
+    "df['Emissions_per_Production'] = df['Total S1+S2 (tCo2e)'] / df['Romeo (milUSD)']\n",
+    "df['Raw_Material_Intensity'] = df['Total S1+S2 (tCo2e)'] / df['Alpha (milUSD)']\n",
+    "\n",
+    "# Normalize features by sector medians\n",
+    "for sector in sector_medians.keys():\n",
+    "    mask = df['Subsector Name'] == sector\n",
+    "    df.loc[mask, 'Normalized_Charlie'] = df.loc[mask, 'Charlie (milUSD)'] / sector_medians[sector]['Charlie (milUSD)']\n",
+    "    df.loc[mask, 'Normalized_Alpha'] = df.loc[mask, 'Alpha (milUSD)'] / sector_medians[sector]['Alpha (milUSD)']\n",
+    "    df.loc[mask, 'Normalized_Romeo'] = df.loc[mask, 'Romeo (milUSD)'] / sector_medians[sector]['Romeo (milUSD)']\n",
+    "    df.loc[mask, 'Normalized_Echo'] = df.loc[mask, 'Echo'] / sector_medians[sector]['Echo']\n",
+    "\n",
+    "# Relative Emission Intensity\n",
+    "sector_emissions_median = df.groupby('Subsector Name')['Total S1+S2 (tCo2e)'].median().to_dict()\n",
+    "df['Relative_Emission_Intensity'] = df.apply(lambda x: x['Total S1+S2 (tCo2e)'] / sector_emissions_median[x['Subsector Name']], axis=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "f4b1be83-22b0-41a4-ac89-8c64b21b7f87",
    "metadata": {},
    "outputs": [
     {
@@ -466,6 +508,14 @@
        "      <th>Alpha (milUSD)</th>\n",
        "      <th>Romeo (milUSD)</th>\n",
        "      <th>Echo</th>\n",
+       "      <th>Energy_Intensity</th>\n",
+       "      <th>Emissions_per_Production</th>\n",
+       "      <th>Raw_Material_Intensity</th>\n",
+       "      <th>Normalized_Charlie</th>\n",
+       "      <th>Normalized_Alpha</th>\n",
+       "      <th>Normalized_Romeo</th>\n",
+       "      <th>Normalized_Echo</th>\n",
+       "      <th>Relative_Emission_Intensity</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -478,6 +528,14 @@
        "      <td>213.081635</td>\n",
        "      <td>2650.219949</td>\n",
        "      <td>8558.0</td>\n",
+       "      <td>5.838653</td>\n",
+       "      <td>2.414517</td>\n",
+       "      <td>30.030744</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.540491</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -488,6 +546,14 @@
        "      <td>1061.630736</td>\n",
        "      <td>8869.070062</td>\n",
        "      <td>21357.0</td>\n",
+       "      <td>47.235465</td>\n",
+       "      <td>6.763956</td>\n",
+       "      <td>56.507407</td>\n",
+       "      <td>1.158807</td>\n",
+       "      <td>4.982272</td>\n",
+       "      <td>3.346541</td>\n",
+       "      <td>2.495560</td>\n",
+       "      <td>5.067050</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -498,6 +564,14 @@
        "      <td>2018.705686</td>\n",
        "      <td>10689.439260</td>\n",
        "      <td>34500.0</td>\n",
+       "      <td>47.062827</td>\n",
+       "      <td>27.705850</td>\n",
+       "      <td>146.707864</td>\n",
+       "      <td>4.746065</td>\n",
+       "      <td>2.593629</td>\n",
+       "      <td>5.972313</td>\n",
+       "      <td>7.436948</td>\n",
+       "      <td>1.486859</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -508,6 +582,14 @@
        "      <td>2956.230233</td>\n",
        "      <td>3302.499773</td>\n",
        "      <td>5900.0</td>\n",
+       "      <td>455.482246</td>\n",
+       "      <td>290.688892</td>\n",
+       "      <td>324.737901</td>\n",
+       "      <td>1.589590</td>\n",
+       "      <td>3.798159</td>\n",
+       "      <td>1.845145</td>\n",
+       "      <td>1.271826</td>\n",
+       "      <td>4.819640</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -518,9 +600,25 @@
        "      <td>1746.387752</td>\n",
        "      <td>11090.105310</td>\n",
        "      <td>61000.0</td>\n",
+       "      <td>30.899350</td>\n",
+       "      <td>22.870928</td>\n",
+       "      <td>145.237505</td>\n",
+       "      <td>2.141880</td>\n",
+       "      <td>1.965653</td>\n",
+       "      <td>1.591700</td>\n",
+       "      <td>1.016667</td>\n",
+       "      <td>1.787570</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -538,6 +636,14 @@
        "      <td>2087.455814</td>\n",
        "      <td>3668.409827</td>\n",
        "      <td>3269.5</td>\n",
+       "      <td>447.351495</td>\n",
+       "      <td>388.169765</td>\n",
+       "      <td>682.153735</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.324133</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>868</th>\n",
@@ -548,6 +654,14 @@
        "      <td>408.682552</td>\n",
        "      <td>1431.694628</td>\n",
        "      <td>2532.0</td>\n",
+       "      <td>17.013624</td>\n",
+       "      <td>11.803250</td>\n",
+       "      <td>41.349086</td>\n",
+       "      <td>0.067831</td>\n",
+       "      <td>0.073381</td>\n",
+       "      <td>0.090824</td>\n",
+       "      <td>0.048321</td>\n",
+       "      <td>0.029933</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>869</th>\n",
@@ -558,6 +672,14 @@
        "      <td>1587.863458</td>\n",
        "      <td>1937.988418</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>2397.350621</td>\n",
+       "      <td>1539.494237</td>\n",
+       "      <td>1878.953751</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.869234</td>\n",
+       "      <td>0.985813</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>870</th>\n",
@@ -568,6 +690,14 @@
        "      <td>778.332346</td>\n",
        "      <td>5874.240000</td>\n",
        "      <td>4639.0</td>\n",
+       "      <td>2110.245396</td>\n",
+       "      <td>476.316936</td>\n",
+       "      <td>3594.865373</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.282006</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>14.047243</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>871</th>\n",
@@ -578,10 +708,18 @@
        "      <td>85.028067</td>\n",
        "      <td>1412.428210</td>\n",
        "      <td>3165.5</td>\n",
+       "      <td>0.928438</td>\n",
+       "      <td>0.169920</td>\n",
+       "      <td>2.822597</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.058136</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>872 rows × 7 columns</p>\n",
+       "<p>872 rows × 15 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -611,37 +749,64 @@
        "870                 Specialty Chemicals       1325.912145      778.332346   \n",
        "871                     Capital Markets        258.498748       85.028067   \n",
        "\n",
-       "     Romeo (milUSD)     Echo  \n",
-       "0       2650.219949   8558.0  \n",
-       "1       8869.070062  21357.0  \n",
-       "2      10689.439260  34500.0  \n",
-       "3       3302.499773   5900.0  \n",
-       "4      11090.105310  61000.0  \n",
-       "..              ...      ...  \n",
-       "867     3668.409827   3269.5  \n",
-       "868     1431.694628   2532.0  \n",
-       "869     1937.988418      0.0  \n",
-       "870     5874.240000   4639.0  \n",
-       "871     1412.428210   3165.5  \n",
+       "     Romeo (milUSD)     Echo  Energy_Intensity  Emissions_per_Production  \\\n",
+       "0       2650.219949   8558.0          5.838653                  2.414517   \n",
+       "1       8869.070062  21357.0         47.235465                  6.763956   \n",
+       "2      10689.439260  34500.0         47.062827                 27.705850   \n",
+       "3       3302.499773   5900.0        455.482246                290.688892   \n",
+       "4      11090.105310  61000.0         30.899350                 22.870928   \n",
+       "..              ...      ...               ...                       ...   \n",
+       "867     3668.409827   3269.5        447.351495                388.169765   \n",
+       "868     1431.694628   2532.0         17.013624                 11.803250   \n",
+       "869     1937.988418      0.0       2397.350621               1539.494237   \n",
+       "870     5874.240000   4639.0       2110.245396                476.316936   \n",
+       "871     1412.428210   3165.5          0.928438                  0.169920   \n",
        "\n",
-       "[872 rows x 7 columns]"
+       "     Raw_Material_Intensity  Normalized_Charlie  Normalized_Alpha  \\\n",
+       "0                 30.030744            1.000000          1.000000   \n",
+       "1                 56.507407            1.158807          4.982272   \n",
+       "2                146.707864            4.746065          2.593629   \n",
+       "3                324.737901            1.589590          3.798159   \n",
+       "4                145.237505            2.141880          1.965653   \n",
+       "..                      ...                 ...               ...   \n",
+       "867              682.153735            1.000000          1.000000   \n",
+       "868               41.349086            0.067831          0.073381   \n",
+       "869             1878.953751            1.000000          0.869234   \n",
+       "870             3594.865373            1.000000          1.000000   \n",
+       "871                2.822597            1.000000          1.000000   \n",
+       "\n",
+       "     Normalized_Romeo  Normalized_Echo  Relative_Emission_Intensity  \n",
+       "0            1.000000         1.000000                     0.540491  \n",
+       "1            3.346541         2.495560                     5.067050  \n",
+       "2            5.972313         7.436948                     1.486859  \n",
+       "3            1.845145         1.271826                     4.819640  \n",
+       "4            1.591700         1.016667                     1.787570  \n",
+       "..                ...              ...                          ...  \n",
+       "867          1.000000         1.000000                     1.324133  \n",
+       "868          0.090824         0.048321                     0.029933  \n",
+       "869          0.985813         0.000000                     1.000000  \n",
+       "870          3.282006         1.000000                    14.047243  \n",
+       "871          1.000000         1.000000                     0.058136  \n",
+       "\n",
+       "[872 rows x 15 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def fill_missing_values(row):\n",
-    "    sector = row['Subsector Name']\n",
-    "    for col in [\"Charlie (milUSD)\",\"Alpha (milUSD)\",\"Romeo (milUSD)\",\"Echo\"]:\n",
-    "        if pd.isna(row[col]) and sector in sector_median:\n",
-    "            row[col] = sector_median[sector][col]\n",
-    "    return row\n",
-    "\n",
-    "df.apply(fill_missing_values, axis = 1)"
+    "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af8cd21f-7688-48fd-a533-bef5f1b29309",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
