Sector wise analysis

--- a/src/scope1_scope2_analysis.ipynb
+++ b/src/scope1_scope2_analysis.ipynb
@@ -526,22 +526,23 @@
    "id": "0e130a57-a9fc-4dc0-93fe-03ce9c0a2709",
    "metadata": {},
    "source": [
+    "---\n",
     "### Top 5 Subsector Emissions:\n",
     "- Cement Manufacturers\n",
     "- Oil & Gas Refining & Marketing\n",
     "- Aluminum\n",
     "- Oil & Gas Exploration & Production\n",
     "- Industrial Conglomerates\n",
-    "\n",
+    "---\n",
     "### Last 5 Subsector Emissions:\n",
     "- Regional Banks\n",
     "- Capital Markets\n",
     "- Health Care Services\n",
     "- Gambling\n",
     "- Computer Storage & Peripherals\n",
-    "\n",
-    "__Operational Differences: Industries like Specialty Chemicals, Cement Manufacturing, and Oil & Gas involve processes that inherently produce more emissions, such as chemical reactions, high heat requirements, and direct fossil fuel use.__\n",
-    "__Energy Efficiency: Sectors with lower emissions, such as Software, often benefit from more energy-efficient operations and less dependence on heavy industrial equipment.__"
+    "---\n",
+    "- __Operational Differences: Industries like Specialty Chemicals, Cement Manufacturing, and Oil & Gas involve processes that inherently produce more emissions, such as chemical reactions, high heat requirements, and direct fossil fuel use.__\n",
+    "- __Energy Efficiency: Sectors with lower emissions, such as Software, often benefit from more energy-efficient operations and less dependence on heavy industrial equipment.__"
    ]
   }
  ],
