remove unwanted columns

--- a/src/scope1_scope2_analysis.ipynb
+++ b/src/scope1_scope2_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "f7f4dbb7-986b-4eec-8b15-a99bf5ebb536",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "43e2e29c-e08e-4072-be54-14501f02f41b",
    "metadata": {
     "scrolled": true
@@ -366,7 +366,7 @@
        "19     5107.437078       NaN  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "id": "65308de6-7b95-4b48-9e2c-c42f7fb454c6",
    "metadata": {},
    "outputs": [
@@ -409,7 +409,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "id": "05cbd763-14cc-4604-8f38-e35c79007780",
    "metadata": {
     "scrolled": true
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "id": "2c5758f2-51ee-4136-8a52-b5c0d11cecd2",
    "metadata": {},
    "outputs": [],
@@ -452,32 +452,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "id": "d74af956-90df-416b-8275-bfac7f0813be",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create new features\n",
+    "# # Create new features\n",
     "df['Energy_Intensity'] = df['Total S1+S2 (tCo2e)'] / df['Charlie (milUSD)']\n",
     "df['Emissions_per_Production'] = df['Total S1+S2 (tCo2e)'] / df['Romeo (milUSD)']\n",
     "df['Raw_Material_Intensity'] = df['Total S1+S2 (tCo2e)'] / df['Alpha (milUSD)']\n",
     "\n",
-    "# Normalize features by sector medians\n",
-    "for sector in sector_medians.keys():\n",
-    "    mask = df['Subsector Name'] == sector\n",
-    "    df.loc[mask, 'Normalized_Charlie'] = df.loc[mask, 'Charlie (milUSD)'] / sector_medians[sector]['Charlie (milUSD)']\n",
-    "    df.loc[mask, 'Normalized_Alpha'] = df.loc[mask, 'Alpha (milUSD)'] / sector_medians[sector]['Alpha (milUSD)']\n",
-    "    df.loc[mask, 'Normalized_Romeo'] = df.loc[mask, 'Romeo (milUSD)'] / sector_medians[sector]['Romeo (milUSD)']\n",
-    "    df.loc[mask, 'Normalized_Echo'] = df.loc[mask, 'Echo'] / sector_medians[sector]['Echo']\n",
+    "# # Normalize features by sector medians\n",
+    "# for sector in sector_medians.keys():\n",
+    "#     mask = df['Subsector Name'] == sector\n",
+    "#     df.loc[mask, 'Normalized_Charlie'] = df.loc[mask, 'Charlie (milUSD)'] / sector_medians[sector]['Charlie (milUSD)']\n",
+    "#     df.loc[mask, 'Normalized_Alpha'] = df.loc[mask, 'Alpha (milUSD)'] / sector_medians[sector]['Alpha (milUSD)']\n",
+    "#     df.loc[mask, 'Normalized_Romeo'] = df.loc[mask, 'Romeo (milUSD)'] / sector_medians[sector]['Romeo (milUSD)']\n",
+    "#     df.loc[mask, 'Normalized_Echo'] = df.loc[mask, 'Echo'] / sector_medians[sector]['Echo']\n",
     "\n",
-    "# Relative Emission Intensity\n",
-    "sector_emissions_median = df.groupby('Subsector Name')['Total S1+S2 (tCo2e)'].median().to_dict()\n",
-    "df['Relative_Emission_Intensity'] = df.apply(lambda x: x['Total S1+S2 (tCo2e)'] / sector_emissions_median[x['Subsector Name']], axis=1)\n"
+    "# # Relative Emission Intensity\n",
+    "# sector_emissions_median = df.groupby('Subsector Name')['Total S1+S2 (tCo2e)'].median().to_dict()\n",
+    "# df['Relative_Emission_Intensity'] = df.apply(lambda x: x['Total S1+S2 (tCo2e)'] / sector_emissions_median[x['Subsector Name']], axis=1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 14,
    "id": "af8cd21f-7688-48fd-a533-bef5f1b29309",
    "metadata": {},
    "outputs": [
@@ -487,7 +487,7 @@
        "<AxesSubplot:xlabel='milUSD', ylabel='Subsector Name'>"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -532,6 +532,330 @@
     "- __Operational Differences: Industries like Specialty Chemicals, Cement Manufacturing, and Oil & Gas involve processes that inherently produce more emissions, such as chemical reactions, high heat requirements, and direct fossil fuel use.__\n",
     "- __Energy Efficiency: Sectors with lower emissions, such as Software, often benefit from more energy-efficient operations and less dependence on heavy industrial equipment.__"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2fa93f9b-4c32-4718-8e71-0e275976946f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Company Identifier</th>\n",
+       "      <th>Total S1+S2 (tCo2e)</th>\n",
+       "      <th>Subsector Name</th>\n",
+       "      <th>Charlie (milUSD)</th>\n",
+       "      <th>Alpha (milUSD)</th>\n",
+       "      <th>Romeo (milUSD)</th>\n",
+       "      <th>Echo</th>\n",
+       "      <th>Energy_Intensity</th>\n",
+       "      <th>Emissions_per_Production</th>\n",
+       "      <th>Raw_Material_Intensity</th>\n",
+       "      <th>Normalized_Charlie</th>\n",
+       "      <th>Normalized_Alpha</th>\n",
+       "      <th>Normalized_Romeo</th>\n",
+       "      <th>Normalized_Echo</th>\n",
+       "      <th>Relative_Emission_Intensity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>6399</td>\n",
+       "      <td>Software</td>\n",
+       "      <td>1095.971939</td>\n",
+       "      <td>213.081635</td>\n",
+       "      <td>2650.219949</td>\n",
+       "      <td>8558.0</td>\n",
+       "      <td>5.838653</td>\n",
+       "      <td>2.414517</td>\n",
+       "      <td>30.030744</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.540502</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>59990</td>\n",
+       "      <td>Software</td>\n",
+       "      <td>1270.020324</td>\n",
+       "      <td>1061.630736</td>\n",
+       "      <td>8869.070062</td>\n",
+       "      <td>21357.0</td>\n",
+       "      <td>47.235465</td>\n",
+       "      <td>6.763956</td>\n",
+       "      <td>56.507407</td>\n",
+       "      <td>1.158807</td>\n",
+       "      <td>4.982272</td>\n",
+       "      <td>3.346541</td>\n",
+       "      <td>2.495560</td>\n",
+       "      <td>5.067151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>296160</td>\n",
+       "      <td>Specialty Chemicals</td>\n",
+       "      <td>6292.864579</td>\n",
+       "      <td>2018.705686</td>\n",
+       "      <td>10689.439260</td>\n",
+       "      <td>34500.0</td>\n",
+       "      <td>47.062827</td>\n",
+       "      <td>27.705850</td>\n",
+       "      <td>146.707864</td>\n",
+       "      <td>4.746065</td>\n",
+       "      <td>2.593629</td>\n",
+       "      <td>5.972313</td>\n",
+       "      <td>7.436948</td>\n",
+       "      <td>1.486859</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>960000</td>\n",
+       "      <td>Specialty Chemicals</td>\n",
+       "      <td>2107.656246</td>\n",
+       "      <td>2956.230233</td>\n",
+       "      <td>3302.499773</td>\n",
+       "      <td>5900.0</td>\n",
+       "      <td>455.482246</td>\n",
+       "      <td>290.688892</td>\n",
+       "      <td>324.737901</td>\n",
+       "      <td>1.589590</td>\n",
+       "      <td>3.798159</td>\n",
+       "      <td>1.845145</td>\n",
+       "      <td>1.271826</td>\n",
+       "      <td>4.819640</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>253641</td>\n",
+       "      <td>Health Care  Services</td>\n",
+       "      <td>8208.619341</td>\n",
+       "      <td>1746.387752</td>\n",
+       "      <td>11090.105310</td>\n",
+       "      <td>61000.0</td>\n",
+       "      <td>30.899350</td>\n",
+       "      <td>22.870928</td>\n",
+       "      <td>145.237505</td>\n",
+       "      <td>2.141880</td>\n",
+       "      <td>1.965653</td>\n",
+       "      <td>1.591700</td>\n",
+       "      <td>1.016667</td>\n",
+       "      <td>1.787570</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>867</th>\n",
+       "      <td>868</td>\n",
+       "      <td>1423965</td>\n",
+       "      <td>Oil &amp; Gas Storage &amp; Transportation</td>\n",
+       "      <td>3183.102765</td>\n",
+       "      <td>2087.455814</td>\n",
+       "      <td>3668.409827</td>\n",
+       "      <td>3269.5</td>\n",
+       "      <td>447.351250</td>\n",
+       "      <td>388.169552</td>\n",
+       "      <td>682.153361</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.324132</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>868</th>\n",
+       "      <td>869</td>\n",
+       "      <td>16898</td>\n",
+       "      <td>Automobiles</td>\n",
+       "      <td>993.242228</td>\n",
+       "      <td>408.682552</td>\n",
+       "      <td>1431.694628</td>\n",
+       "      <td>2532.0</td>\n",
+       "      <td>17.012970</td>\n",
+       "      <td>11.802796</td>\n",
+       "      <td>41.347496</td>\n",
+       "      <td>0.067831</td>\n",
+       "      <td>0.073381</td>\n",
+       "      <td>0.090824</td>\n",
+       "      <td>0.048321</td>\n",
+       "      <td>0.029932</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>869</th>\n",
+       "      <td>870</td>\n",
+       "      <td>2983522</td>\n",
+       "      <td>Coal</td>\n",
+       "      <td>1244.507989</td>\n",
+       "      <td>1587.863458</td>\n",
+       "      <td>1937.988418</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2397.350621</td>\n",
+       "      <td>1539.494237</td>\n",
+       "      <td>1878.953751</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.869234</td>\n",
+       "      <td>0.985813</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>870</th>\n",
+       "      <td>871</td>\n",
+       "      <td>2798000</td>\n",
+       "      <td>Specialty Chemicals</td>\n",
+       "      <td>1325.912145</td>\n",
+       "      <td>778.332346</td>\n",
+       "      <td>5874.240000</td>\n",
+       "      <td>4639.0</td>\n",
+       "      <td>2110.245396</td>\n",
+       "      <td>476.316936</td>\n",
+       "      <td>3594.865373</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.282006</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>14.047243</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>871</th>\n",
+       "      <td>872</td>\n",
+       "      <td>240</td>\n",
+       "      <td>Capital Markets</td>\n",
+       "      <td>258.498748</td>\n",
+       "      <td>85.028067</td>\n",
+       "      <td>1412.428210</td>\n",
+       "      <td>3165.5</td>\n",
+       "      <td>0.928438</td>\n",
+       "      <td>0.169920</td>\n",
+       "      <td>2.822597</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.058147</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>872 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Company Identifier  Total S1+S2 (tCo2e)  \\\n",
+       "0                     1                 6399   \n",
+       "1                     2                59990   \n",
+       "2                     3               296160   \n",
+       "3                     4               960000   \n",
+       "4                     5               253641   \n",
+       "..                  ...                  ...   \n",
+       "867                 868              1423965   \n",
+       "868                 869                16898   \n",
+       "869                 870              2983522   \n",
+       "870                 871              2798000   \n",
+       "871                 872                  240   \n",
+       "\n",
+       "                         Subsector Name  Charlie (milUSD)  Alpha (milUSD)  \\\n",
+       "0                              Software       1095.971939      213.081635   \n",
+       "1                              Software       1270.020324     1061.630736   \n",
+       "2                   Specialty Chemicals       6292.864579     2018.705686   \n",
+       "3                   Specialty Chemicals       2107.656246     2956.230233   \n",
+       "4                 Health Care  Services       8208.619341     1746.387752   \n",
+       "..                                  ...               ...             ...   \n",
+       "867  Oil & Gas Storage & Transportation       3183.102765     2087.455814   \n",
+       "868                         Automobiles        993.242228      408.682552   \n",
+       "869                                Coal       1244.507989     1587.863458   \n",
+       "870                 Specialty Chemicals       1325.912145      778.332346   \n",
+       "871                     Capital Markets        258.498748       85.028067   \n",
+       "\n",
+       "     Romeo (milUSD)     Echo  Energy_Intensity  Emissions_per_Production  \\\n",
+       "0       2650.219949   8558.0          5.838653                  2.414517   \n",
+       "1       8869.070062  21357.0         47.235465                  6.763956   \n",
+       "2      10689.439260  34500.0         47.062827                 27.705850   \n",
+       "3       3302.499773   5900.0        455.482246                290.688892   \n",
+       "4      11090.105310  61000.0         30.899350                 22.870928   \n",
+       "..              ...      ...               ...                       ...   \n",
+       "867     3668.409827   3269.5        447.351250                388.169552   \n",
+       "868     1431.694628   2532.0         17.012970                 11.802796   \n",
+       "869     1937.988418      0.0       2397.350621               1539.494237   \n",
+       "870     5874.240000   4639.0       2110.245396                476.316936   \n",
+       "871     1412.428210   3165.5          0.928438                  0.169920   \n",
+       "\n",
+       "     Raw_Material_Intensity  Normalized_Charlie  Normalized_Alpha  \\\n",
+       "0                 30.030744            1.000000          1.000000   \n",
+       "1                 56.507407            1.158807          4.982272   \n",
+       "2                146.707864            4.746065          2.593629   \n",
+       "3                324.737901            1.589590          3.798159   \n",
+       "4                145.237505            2.141880          1.965653   \n",
+       "..                      ...                 ...               ...   \n",
+       "867              682.153361            1.000000          1.000000   \n",
+       "868               41.347496            0.067831          0.073381   \n",
+       "869             1878.953751            1.000000          0.869234   \n",
+       "870             3594.865373            1.000000          1.000000   \n",
+       "871                2.822597            1.000000          1.000000   \n",
+       "\n",
+       "     Normalized_Romeo  Normalized_Echo  Relative_Emission_Intensity  \n",
+       "0            1.000000         1.000000                     0.540502  \n",
+       "1            3.346541         2.495560                     5.067151  \n",
+       "2            5.972313         7.436948                     1.486859  \n",
+       "3            1.845145         1.271826                     4.819640  \n",
+       "4            1.591700         1.016667                     1.787570  \n",
+       "..                ...              ...                          ...  \n",
+       "867          1.000000         1.000000                     1.324132  \n",
+       "868          0.090824         0.048321                     0.029932  \n",
+       "869          0.985813         0.000000                     1.000000  \n",
+       "870          3.282006         1.000000                    14.047243  \n",
+       "871          1.000000         1.000000                     0.058147  \n",
+       "\n",
+       "[872 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
