--- a/src/scope1_scope2_analysis.ipynb
+++ b/src/scope1_scope2_analysis.ipynb
@@ -722,7 +722,9 @@
    "cell_type": "code",
    "execution_count": 34,
    "id": "9cd45f35-c40e-4ec4-aec6-f65f468687ba",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -743,6 +745,16 @@
     "sns.heatmap(correlation_matrix, annot=True, cmap='coolwarm', linewidths=0.5)\n",
     "plt.title(\"Correlation Heatmap of Total S1+S2 Emissions and Other Variables\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "4f490f14-034f-43e0-8094-93923194b4c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_transformed.to_csv(\"transfromed_scope1_scope2.csv\", index = False)\n"
    ]
   },
   {
